# marawav999

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  INSTALLATION.md  README.md  TEST_CASES.md  docker-compose.yml  product.md  pyproject.toml  requirements-dev.txt  requirements.txt  search_webapi_bps.md
app/: __init__.py  config.py  main.py  models.py
app/conversation/: __init__.py  engine.py  intent_parser.py  parsing.py  session_store.py
app/services/: admin_handoff.py  ai_client.py  bps_client.py  google_sheets_logger.py  gowa_client.py  guarded_agent.py  wa_formatter.py
proxy/: Dockerfile  docker-compose.yml  proxy_bps.py
scripts/: inspect_bps_var.py  probe_bps_data.py
tests/: test_ai_client.py  test_bps_client.py  test_conversation_engine.py  test_google_sheets_logger.py  test_gowa_client.py  test_intent_parser.py  test_parsing.py  test_webhook_parsing.py
