[project]
name = "marawa-bps-padang-pariaman"
version = "0.1.0"
description = "WhatsApp chatbot for BPS Kabupaten Padang Pariaman backed by GOWA, BPS WebAPI, AI intent parsing, and Google Sheets logging."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",
    "openai>=1.40.0",
    "google-api-python-client>=2.140.0",
    "google-auth>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

